--- a/ListNow/WebContent/WEB-INF/web.xml
+++ b/ListNow/WebContent/WEB-INF/web.xml
@@ -36,8 +36,8 @@
   		<auth-method>FORM</auth-method>
 		<realm-name>ListnowJDBCRealm</realm-name>
     	<form-login-config>
-      		<form-login-page>/login.html</form-login-page>
-      		<form-error-page>/login.html</form-error-page>
+      		<form-login-page>/login</form-login-page>
+      		<form-error-page>/login</form-error-page>
     	</form-login-config>
 	</login-config>
    
