Search is done, but need impliment more features. login is done. signup is done.

--- a/ListNow/WebContent/WEB-INF/web.xml
+++ b/ListNow/WebContent/WEB-INF/web.xml
@@ -45,6 +45,7 @@
     <web-resource-collection>
       <web-resource-name>All Resources</web-resource-name>
       <url-pattern>/secure</url-pattern>
+      <url-pattern>/post</url-pattern>
     </web-resource-collection>
     <auth-constraint>
       <role-name>role_admin</role-name>
